--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
         <div class="row">
           <div class="col-lg-10 pt-4 pt-lg-0 content" data-aos="fade-left">
             <p style="font-family: 'SendBox font medium'; margin-bottom: 45px">"안녕하세요 조금 늦게 시작했지만 신입 서버 개발자가 되고 싶은 최영하입니다."</p>
-            <p class="fst-alic" style="margin-bottom: 30px">저는 검색엔진 엔지니어로 일하면서 항상 사업에 도전해보고 싶었습니다.
-              그러다가 기회가 생겨 브랜디라는 커머스 회사로 이직을 하게 됐습니다. 하지만 갑작스러운 경영악화를 사유로 회사를 나오게 됐습니다.
-              저는 이 위기를 기회로 바꾸고 싶었고, 젊었을 때 사업에 도전하고 싶어 과감히 사업을 시작했습니다.
-              1년에 가까운 시간동안 마케팅, 영업, 기획, 기술공부, 벤치마킹 등 노력했지만 점점 한계를 느끼게 되어 사업을 정리했습니다.
-              이번 도전으로 잃은 것도 많지만 배운 것도 많습니다. 무엇보다 앞으로의 삶의 방향을 확실히 잡을 수 있었습니다.
-              남들보다 늦게 시작한 만큼 남들보다 더욱 노력 할 것을 결심했고, 하루 종일 시간을 투자하여 개발 공부를 하고 있습니다.</p>
+            <p class="fst-alic" style="margin-bottom: 30px">저는 검색엔진 엔지니어로 일하며 항상 사업에 도전하고 싶었습니다.
+              그러던 중 브랜디라는 커머스 회사로 이직하게 되었지만, 갑작스러운 경영 악화로 회사를 떠나게 되었습니다.
+              이를 기회로 삼아 젊었을 때 사업에 도전하기로 결심하고 사업을 시작했습니다.<br><br>
+
+              1년 가까이 마케팅, 영업, 기획, 기술 공부, 벤치마킹 등 다양한 노력을 기울였지만, 점점 한계를 느껴 결국 사업을 정리하게 되었습니다.
+              이번 도전으로 잃은 것도 많았지만, 배운 것도 많았습니다. 특히 앞으로의 삶의 방향을 확실히 정할 수 있었습니다.<br><br>
+
+              <b>남들보다 늦게 시작한 만큼 더욱 노력하기로 결심했고, 현재 하루 종일 개발 공부에 전념하고 있습니다.</b></p>
           </div>
         </div>
 
@@ -254,53 +256,6 @@
       <div class="col-11" style="background-color: #0a58ca; text-align: center; color: white; margin-left: 50px">앞으로 더 많은 프로젝트가 추가될 예정입니다 :)</div>
     </section><!-- End Facts Section -->
 
-    <section id="Experience" data-aos="fade-up">
-      <div class="container mt-5">
-        <div class="text-center mb-4 mb-5">
-          <h1>What I Do?</h1>
-          <p style="font-family: 'SendBox font light'; letter-spacing: 5px;">저는 이런 "경험"들도 해봤습니다.</p>
-          <p style="font-family: 'BM Hanna 11yrs Old'">현재 백엔드 엔지니어로서는 큰 도움은 되지 않을 수 있지만, 회사에서 필요로 한다면 이런 역량도 가지고 있습니다.</p>
-
-        </div>
-        <div class="row g-4">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-body text-center">
-                <div class="hexagon blue">
-                  <i class="fas fa-lightbulb"></i>
-                </div>
-                <h5 class="card-title mt-3">동영상 제작 능력</h5>
-                <p class="card-text">채널을 운영하면서 유튜브, 페이스북, 인스타그램, 틱톡 총 팔로워는 1만명이 넘습니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-body text-center">
-                <div class="hexagon red">
-                  <i class="fa-solid fa-comments"></i>
-                </div>
-                <h5 class="card-title mt-3">커뮤니케이션 능력</h5>
-                <p class="card-text">발표하는 것을 좋아하며 새로운 사람을 만나는 것을 좋아합니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-body text-center">
-                <div class="hexagon yellow">
-                  <i class="fa-solid fa-briefcase"></i>
-                </div>
-                <h5 class="card-title mt-3">남성 스타일링 코칭</h5>
-                <p class="card-text">회사 동료들의 외모를 최적화 하여 성공적인 연애를 도와줄 수 있습니다.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-    </section>
 
     <!-- ======= Resume Section ======= -->
     <section id="Career" class="resume">
@@ -313,7 +268,7 @@
             <h3 class="resume-title">SNS 컨텐츠 채널운영</h3>
             <div class="resume-item pb-0">
               <h4>2023.09 ~ 2024.03</h4>
-              <p style="font-family: 'BM Dohyeon'">6개월동안 유튜브, 인스타그램, 페이스북, 틱톡 등에 채널은 운영하면서 총 팔로워 1만명 이상을 달성했습니다.</p>
+              <p style="font-family: 'BM Dohyeon'">6개월동안 유튜브, 인스타그램, 페이스북, 틱톡 등에 채널은 운영하면서 총 팔로워 1만명을 달성했습니다.</p>
             </div>
 
             <h3 class="resume-title">스타일컨설팅 사업운영</h3>
